--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier src/. -w"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -26,15 +27,20 @@
     "ky": "^1.8.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.522.0",
+    "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "php-serialize": "^5.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.0.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
