--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
-    "prettier": "prettier src/. -w"
+    "lint": "eslint . --fix",
+    "format": "prettier . -w",
+    "check": "tsc -b --noEmit",
+    "lint-staged": "lint-staged",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -53,6 +56,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
